css fix: make sure top pixel of menu is visible

--- a/style/style.sass
+++ b/style/style.sass
@@ -58,7 +58,7 @@ input, textarea
 
 .menu
   +bg
-  height: 40px; line-height: 17px; cursor: default; padding: 0; margin: 0; font-family: sans-serif
+  height: 40px; line-height: 17px; cursor: default; padding: 0; margin: 2px 0 0 0; font-family: sans-serif
   a { text-decoration: none; color: black; cursor: default; outline: 0; }
   &>div
     +bg
